<resources>
    <string name="app_name">PrimeiroApp</string>
    <string name="_0_00">0.00</string>
    <string name="meu_app_gat_o">Meu App - Gatão</string>
    <string name="_99_99">99.99</string>
    <string name="libra">Libra</string>
    <string name="euro">Euro</string>
    <string name="dolar">Dolar</string>
    <string name="converter">Converter</string>
    <string name="dolaaar">Dolaaar</string>
</resources>